syntax = "proto3";
import "event.proto";

option java_multiple_files = true;
option java_package = "gov.nist.csd.pm.proto.epp";

package gov.nist.csd.pm.proto.epp;

message StringList {
  repeated string values = 1;
}

message OperandEntry {
  string name = 1;
  oneof value {
    string stringValue = 2;
    StringList listValue = 3;
  }
}

message EventContext {
  string user = 1;
  string process = 2;
  string opName = 3;
  repeated OperandEntry operands = 4;
}

message EPPResponse {
  uint64 startRevision = 1;
  repeated gov.nist.csd.pm.proto.event.PMEvent events = 2;
}

message ExecuteResponseRequest {
  string obligationName = 1;
  string ruleName = 2;
  EventContext eventCtx = 3;
}

service EPP {
  rpc processEvent(EventContext) returns (EPPResponse) {}
}